# codeStation-backend

./: .gitignore  dbdata.sql  main.py  manage.py  pyproject.toml  requirements.txt
CoderStation/: __init__.py  api.py  asgi.py  chen_ninja.py  settings.py  urls.py  wsgi.py
CoderStation/conf/: jwt_config.py
apps/issue/: apps.py  controllers.py  filterSchemas.py  models.py  schema.py  service.py  signal.py
apps/issue/migrations/: 0001_initial.py  0002_alter_issue_update_date.py  0003_issue_commentnumber_issue_scannumber.py  0004_remove_issue_type.py  0005_comment.py  0006_comment_type.py  0007_alter_comment_commenttype_alter_comment_issue.py  0008_alter_comment_commenttype_quiz.py  0009_book.py  0010_book_commentnumber_book_scannumber.py  0011_book_create_date.py  0012_comment_book.py  0013_alter_comment_commenttype.py
apps/user/: apps.py  controllers.py  models.py  schema.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_options_rename_uid_user_id.py  0003_user_role.py  0004_user_points.py  0005_user_enabled_user_permission_alter_user_role.py  0006_user_intro_user_qq_user_wechat.py
utils/: captcha.py  chen_response.py  code_list.py  pagination.py
